      where there was no adjacent hex.
   -- Fixed a bug in unit drowning when they left a boat.
   -- Fixed a bug in combat where the rules and code differed.  Code now
      follows the rules.
   -- Fixed a bug in display of info about shield effects generated by items.
   -- Fixed bug in forlist during assassination which caused assassinations
      to stop if the person you assassinated was directly below you in the
	  unit list in the object.
   -- Tom Alsen added code to Blitzgame allowing monsters to regenerate hits
      during combat.  I have merged this code into the main base under a
	  configuration option.
   -- Patch for multiple types of taxing behaviour controlling who is
      allowed to tax.  Patch submitted by Stephen Baillie.
   -- Fixed a bug in BUY/SELL where two buys or sells of the same item would
      cause the second to fail with an error.
   -- Fixed another instance of the missing ENDFORM order which caused a
      crash.
   -- Added EVICT order as submitted by Peter Rayner
      <wacky_wizard001@hotmail.com> with slight modifications.
   -- Fixed bugs in combat where riding skill was being counted twice in
      defence, and ranged weaponswere using COMB skill for attack strength.
   -- Fixed bug in EVICT code that caused a segmentation fault
   -- Added SKILL_PRACTISE_AMOUNT and associated code all over the place
      to allow skills to improve with practice.  A unit may improve at
      most one skill per month, and will only improve skills they already
      have.  Using a skill counts as practising its prerequisites if they
      need to be impoved before the skill can advance further.  The only
      skill which cannot be improved through practice is OBSE, as if it
      can be improved it tended to be improved in preference to all other
      skills, as it is used in the automatic attack phase.  I suggest a
      value of 5 for SKILL_PRACTISE_AMOUNT.
   -- Fixed a bug where CanSee was not taking account of MIND skill.